--- a/src/app/modules/control/add-master-data/add-master-data.component.html
+++ b/src/app/modules/control/add-master-data/add-master-data.component.html
@@ -49,7 +49,8 @@
                                        || Parent=='Roll No Generation' 
                                        || Parent=='User Type'
                                        || Parent=='Exam Status'
-                                       || Parent=='Fee Payment Type'                                       
+                                       || Parent=='Fee Payment Type'    
+                                       || Parent=='Subject Category'    
                                        || element.MasterDataName=='Admin'
                                        || element.MasterDataName=='Teacher'
                                        || element.MasterDataName=='Student'
