--- a/src/app/modules/schooltimetable/teachersubject/teachersubject.component.scss
+++ b/src/app/modules/schooltimetable/teachersubject/teachersubject.component.scss
@@ -1,3 +1,19 @@
 mat-form-field{
     margin-right: 15px;
 }
+.mat-column-ClassName,
+.mat-column-ClassSubjectId,
+.mat-column-EmployeeId,
+.mat-column-ClsName{
+    justify-content: center;
+    flex:1 1 120px;
+}
+.mat-column-Active,.mat-column-Action{
+    justify-content: center;
+    flex:1 1 100px;
+}
+.mat-column-TeacherSubjectId
+{
+    justify-content: center;
+    flex: 1 1 50px;
+}
