--- a/src/app/modules/ClassSubject/AssignStudentClass/Assignstudentclassdashboard.component.scss
+++ b/src/app/modules/ClassSubject/AssignStudentClass/Assignstudentclassdashboard.component.scss
@@ -2,13 +2,15 @@ mat-form-field{
     margin-right: 15px;
     width:98%;
 }
-.mat-column-PID{
-    flex:1 1 70px;
+.mat-column-StudentClassId{
+    justify-content: center;
+    flex:1 1 100px;
 }
 .mat-column-GenderName,.mat-column-Active,
 .mat-column-Action,
 .mat-column-RollNo,
 .mat-column-ClassName,
+.mat-column-RemarkId,
 .mat-column-SectionId{
     //justify-content: center;
     flex:1 0 100px;
