--- a/src/app/modules/studentexam/slotnclasssubject/slotnclasssubject.component.html
+++ b/src/app/modules/studentexam/slotnclasssubject/slotnclasssubject.component.html
@@ -22,15 +22,15 @@
             </mat-select>
         </mat-form-field>
         <button [disabled]="loading" mat-raised-button color="accent" (click)="GetSlotNClassSubjects()">
-             <mat-icon>search</mat-icon>
-                            <mat-icon *ngIf="loading">
-                                <mat-spinner diameter="20" color="Blue"></mat-spinner>
-                            </mat-icon>
+            <mat-icon>search</mat-icon>
+            <mat-icon *ngIf="loading">
+                <mat-spinner diameter="20" color="Blue"></mat-spinner>
+            </mat-icon>
         </button>
     </form>
     <p>Record will be displayed if it is defined in class subject module.</p>
     <mat-divider></mat-divider>
-    <mat-table #table [dataSource]="dataSource">                
+    <mat-table #table [dataSource]="dataSource">
         <ng-container matColumnDef="ClassName">
             <mat-header-cell *matHeaderCellDef>Class
             </mat-header-cell>
@@ -43,37 +43,32 @@
             </mat-header-cell>
             <mat-cell *matCellDef="let element">
                 <mat-radio-group style="margin: 15px 15px 15px 0px;" [name]="element.ClassName">
-                    <mat-radio-button style="margin-right: 15px;"
-                    *ngFor="let cell of element.Subject;"
-                        [name]="element.ClassName"
-                        [value]="cell.ClassSubjectId"
-                        (change)="updateActive(element,$event,cell.SubjectName)" 
-                        [checked]="cell.value===1"
-                        [disabled]="cell.value===2"
-                        [matTooltip]="cell.Tooltip"
-                        >
+                    <mat-radio-button style="margin-right: 15px;" *ngFor="let cell of element.Subject;"
+                        [name]="element.ClassName" [value]="cell.ClassSubjectId"
+                        (change)="updateActive(element,$event,cell.SubjectName)" [checked]="cell.value===1"
+                        [disabled]="cell.value===2" [matTooltip]="cell.Tooltip">
                         {{cell.SubjectName}}
                     </mat-radio-button>
                 </mat-radio-group>
             </mat-cell>
-        </ng-container>        
+        </ng-container>
         <ng-container matColumnDef="Action">
             <mat-header-cell *matHeaderCellDef>
-                <button [disabled]="loading || Permission=='read'" matTooltip="save all" *ngIf="ClassWiseSubjectDisplay.length>0"
-                     mat-mini-fab (click)="SaveAll()">
+                <button [disabled]="loading || Permission=='read'" matTooltip="save all"
+                    *ngIf="ClassWiseSubjectDisplay.length>0" mat-mini-fab (click)="SaveAll()">
                     <mat-icon>all_out</mat-icon>
-                <mat-icon *ngIf="loading">
-                    <mat-spinner diameter="20" color="Blue"></mat-spinner>
-                </mat-icon>
+                    <mat-icon *ngIf="loading">
+                        <mat-spinner diameter="20" color="Blue"></mat-spinner>
+                    </mat-icon>
                 </button>
             </mat-header-cell>
             <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                <button [disabled]="loading || !element.Action" matTooltip="save" 
-mat-raised-button color="accent" (click)="Save(element)">
-                     <mat-icon>save</mat-icon>
-                            <mat-icon *ngIf="loading">
-                                <mat-spinner diameter="20" color="Blue"></mat-spinner>
-                            </mat-icon>
+                <button [disabled]="loading || !element.Action" matTooltip="save" mat-raised-button color="accent"
+                    (click)="Save(element)">
+                    <mat-icon>save</mat-icon>
+                    <mat-icon *ngIf="loading">
+                        <mat-spinner diameter="20" color="Blue"></mat-spinner>
+                    </mat-icon>
                 </button>
             </mat-cell>
         </ng-container>
