--- a/src/app/modules/studentexam/verifyresults/verifyresults.component.html
+++ b/src/app/modules/studentexam/verifyresults/verifyresults.component.html
@@ -7,7 +7,7 @@
 <form [formGroup]="searchForm">
     <mat-form-field appearance="outline" style="width:150px">
         <mat-label>Exam</mat-label>
-        <mat-select formControlName="searchExamId">
+        <mat-select formControlName="searchExamId" (selectionChange)="FilterClass()">
             <mat-option *ngFor="let item of Exams" [value]="item.ExamId">
                 {{item.ExamName}}
             </mat-option>
@@ -17,7 +17,7 @@
         <mat-label>Class</mat-label>
         <mat-select formControlName="searchClassId" (selectionChange)="GetStudentGrade()">
             <!-- <mat-option [value]="0">--class--</mat-option> -->
-            <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
+            <mat-option *ngFor="let item of FilteredClasses" [value]="item.ClassId">
                 {{item.ClassName}}
             </mat-option>
         </mat-select>
@@ -41,28 +41,46 @@
         (click)="clear()">
         <mat-icon>clear_all</mat-icon>
     </button>
-    <button [disabled]="loading || ClickedVerified" matTooltip="verified" *ngIf="ExamStudentSubjectResult.length>0"
+    <button [disabled]="loading || ClickedVerified" matTooltip="verified" *ngIf="ExamStudentSubjectResult.length>0 || ExamStudentSubjectGrading.length>0"
         mat-raised-button color="accent" (click)="Verified()">
         <mat-icon>checked</mat-icon>
     </button>
 </form>
 <div style="width: 100%;">
+    <div *ngIf="ExamStudentSubjectResult.length>0">
+        <mat-table #table [dataSource]="dataSource" matSort>
+            <ng-container *ngFor="let disCol of displayedColumns; let colIndex = index" matColumnDef="{{disCol}}">
+                <mat-header-cell *matHeaderCellDef mat-sort-header>
+                    {{disCol!='Action'?disCol:''}}
+                </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    {{element[disCol]}}
+                </mat-cell>
+            </ng-container>
+            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+            <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
 
-    <mat-table #table [dataSource]="dataSource" matSort>
+        </mat-table>
+        <mat-paginator [pageSizeOptions]="[10,25,100]"></mat-paginator>
+    </div>
+    <div *ngIf="ExamStudentSubjectGrading.length>0" style="flex-direction: column;">
+        <div style="font-weight: bold;">Grading Subject</div>
+        <mat-table #table [dataSource]="GradingDataSource" matSort>
 
-        <ng-container *ngFor="let disCol of displayedColumns; let colIndex = index" matColumnDef="{{disCol}}">
-            <mat-header-cell *matHeaderCellDef mat-sort-header>
-                {{disCol!='Action'?disCol:''}}
-            </mat-header-cell>
-            <mat-cell *matCellDef="let element">
-                {{element[disCol]}}
-            </mat-cell>
-        </ng-container>
-        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-        <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
+            <ng-container *ngFor="let disCol of GradingDisplayedColumns; let colIndex = index"
+                matColumnDef="{{disCol}}">
+                <mat-header-cell *matHeaderCellDef mat-sort-header>
+                    {{disCol!='Action'?disCol:''}}
+                </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    {{element[disCol]}}
+                </mat-cell>
+            </ng-container>
+            <mat-header-row *matHeaderRowDef="GradingDisplayedColumns"></mat-header-row>
+            <mat-row *matRowDef="let row; columns: GradingDisplayedColumns;" class="element-row"></mat-row>
 
-    </mat-table>
-    <mat-paginator [pageSizeOptions]="[10,25,100]"></mat-paginator>
+        </mat-table>
+    </div>
 </div>
 
 <!-- </div>
