--- a/src/app/modules/student/studentprogressreport/studentprogressreport.component.html
+++ b/src/app/modules/student/studentprogressreport/studentprogressreport.component.html
@@ -3,19 +3,21 @@
 </div>
 <mat-spinner *ngIf="PageLoading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
 <div style="width: 100%;">
-
-    <mat-table #table [dataSource]="NonGradedSubjectsDataSource" matSort *ngIf="NonGradedDisplayColumns.length>1">
-        <ng-container *ngFor="let disCol of NonGradedDisplayColumns; let colIndex = index" matColumnDef="{{disCol}}">
-            <mat-header-cell *matHeaderCellDef mat-sort-header><span *ngIf="disCol!='Subject'">{{disCol}}</span>
-            </mat-header-cell>
-            <mat-cell *matCellDef="let element">
-                {{element[disCol]}}
-            </mat-cell>
-        </ng-container>
-        <mat-header-row *matHeaderRowDef="NonGradedDisplayColumns"></mat-header-row>
-        <mat-row *matRowDef="let row; columns: NonGradedDisplayColumns;" class="element-row"></mat-row>
-    </mat-table>
-    <div *ngIf="GradedDisplayColumns.length>1">
+    <div style="margin-top:15px;margin-bottom:15px">
+        <mat-table #table [dataSource]="NonGradedSubjectsDataSource" matSort *ngIf="NonGradedDisplayColumns.length>1">
+            <ng-container *ngFor="let disCol of NonGradedDisplayColumns; let colIndex = index"
+                matColumnDef="{{disCol}}">
+                <mat-header-cell *matHeaderCellDef mat-sort-header><span *ngIf="disCol!='Subject'">{{disCol}}</span>
+                </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    {{element[disCol]}}
+                </mat-cell>
+            </ng-container>
+            <mat-header-row *matHeaderRowDef="NonGradedDisplayColumns"></mat-header-row>
+            <mat-row *matRowDef="let row; columns: NonGradedDisplayColumns;" class="element-row"></mat-row>
+        </mat-table>
+    </div>
+    <div style="margin-top:15px;margin-bottom:15px" *ngIf="GradedDisplayColumns.length>1">
         <div style="font-weight:bold">Graded Subjects</div>
         <mat-table #table [dataSource]="GradedSubjectsDataSource" matSort>
             <ng-container *ngFor="let disCol of GradedDisplayColumns; let colIndex = index" matColumnDef="{{disCol}}">
@@ -29,15 +31,17 @@
             <mat-row *matRowDef="let row; columns: GradedDisplayColumns;" class="element-row"></mat-row>
         </mat-table>
     </div>
-    <mat-table #table [dataSource]="dataSource" matSort *ngIf="DisplayColumns.length>1">
-        <ng-container *ngFor="let disCol of DisplayColumns; let colIndex = index" matColumnDef="{{disCol}}">
-            <mat-header-cell *matHeaderCellDef mat-sort-header><span *ngIf="disCol!='FirstCol'">{{disCol}}</span>
-            </mat-header-cell>
-            <mat-cell *matCellDef="let element">
-                {{element[disCol]}}
-            </mat-cell>
-        </ng-container>
-        <mat-header-row *matHeaderRowDef="DisplayColumns"></mat-header-row>
-        <mat-row *matRowDef="let row; columns: DisplayColumns;" class="element-row"></mat-row>
-    </mat-table>
+    <div style="margin-top:15px;margin-bottom:15px">
+        <mat-table #table [dataSource]="dataSource" matSort *ngIf="DisplayColumns.length>1">
+            <ng-container *ngFor="let disCol of DisplayColumns; let colIndex = index" matColumnDef="{{disCol}}">
+                <mat-header-cell *matHeaderCellDef mat-sort-header><span *ngIf="disCol!='FirstCol'">{{disCol}}</span>
+                </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    {{element[disCol]}}
+                </mat-cell>
+            </ng-container>
+            <mat-header-row *matHeaderRowDef="DisplayColumns"></mat-header-row>
+            <mat-row *matRowDef="let row; columns: DisplayColumns;" class="element-row"></mat-row>
+        </mat-table>
+    </div>
 </div>
