--- a/src/app/modules/attendance/studenttotalattendance/studenttotalattendance.component.scss
+++ b/src/app/modules/attendance/studenttotalattendance/studenttotalattendance.component.scss
@@ -2,11 +2,10 @@ mat-form-field{
     margin-right: 15px;
     width:98%;
 }
-.mat-column-ClassGroupId,
-.mat-column-MonthYear,
+.mat-column-ClassName,
 .mat-column-TotalNoOfAttendance
 {
-    flex:1 0 120px;
+    flex:1 0 80px;
 }
 .mat-column-Active,.mat-column-Action
 {
