--- a/src/app/modules/control/add-master-data/add-master-data.component.html
+++ b/src/app/modules/control/add-master-data/add-master-data.component.html
@@ -52,6 +52,7 @@
                                        || Parent=='Fee Payment Type'    
                                        || Parent=='Subject Category'    
                                        || Parent=='Questionnaire Type'    
+                                       || Parent=='Attendance Mode'    
                                        || element.MasterDataName=='Admin'
                                        || element.MasterDataName=='Teacher'
                                        || element.MasterDataName=='Student'
