--- a/src/app/shared/components/home/home.component.html
+++ b/src/app/shared/components/home/home.component.html
@@ -5,7 +5,7 @@
         <div mat-menu-item *ngFor="let i of sideMenu" [routerLink]="[i.link]" 
         routerLinkActive="active-list-item"
         [routerLinkActiveOptions]="{exact: true}"
-        (click)="$event.stopPropagation()">
+        (click)="busy($event)">
             <mat-icon [matTooltip]="i.label">{{ i.faIcon}}</mat-icon>&nbsp;
             <span [hidden]="collapse">{{i.label}}</span>
         </div>
